--- a/views/layouts/footer.jade
+++ b/views/layouts/footer.jade
@@ -1,2 +1,4 @@
+script(src='/bower_components/angular/angular.js')
+script(src='/bower_components/jquery/dist/jquery.js')
 script(src='/socket.io/socket.io.js')
 script(src='/javascripts/socket.js')
