--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+  body(ng-app='chatApp')
     block content
     include ./layouts/footer.jade
